# herrschaftderasche

./: .deps-hash  .gitignore  AGENTS.md  Makefile  README.md  hda  pyproject.toml
.github/workflows/: ci.yml
data/: plot.md  save.yaml  world.json
data/de/: commands.de.yaml  commands.yaml  llm.de.yaml  messages.de.yaml  messages.yaml  world.de.yaml  world.yaml
data/en/: commands.en.yaml  commands.yaml  llm.en.yaml  messages.en.yaml  messages.yaml  world.en.yaml  world.yaml
data/es/: commands.es.yaml  llm.es.yaml  messages.es.yaml  world.es.yaml
data/generic/: commands.yaml  world.yaml
engine/: __init__.py  commands.py  game.py  i18n.py  integrity.py  interfaces.py  io.py  language.py  llm.py  parser.py  persistence.py  world.py  world_model.py
game/: __init__.py  main.py
tests/: AGENTS.md  conftest.py  test_action_validation.py  test_auto_save.py  test_cli_entry.py  test_command_arguments.py  test_debug_mode.py  test_effect_item_conditions.py  test_endings.py  test_examine_action.py  test_exit_conditions.py  test_game_yaml_errors.py  test_help.py  test_i18n_errors.py  test_integrity.py  test_interpret_map.py  test_item_states.py  test_language.py  test_log.py  test_look_exits.py  test_look_item.py  test_npcs.py  test_parser_io.py  test_playthrough.py  test_save_state_inventory.py  test_singular_keys.py  test_state_commands.py  test_story.py  test_suffix.py  test_take_command.py  test_talk_command.py  test_use_command.py  test_world_describe_unknown_item.py  test_world_model.py
tests/story/: test_story.py
tests/unit/: test_action_validation.py  test_articles_and_aliases.py  (+33 more)
