[tool.poetry]
name = "herrschaft-der-asche"
version = "0.1.0"
description = "A simple text adventure"
authors = ["Der Mann mit Hut <dermannmithut@metstuebchen.de>"]
packages = [
  { include = "engine" },
  { include = "game" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pyright = "^1.1"
ruff = "*"

[tool.poetry.scripts]
"herrschaft-der-asche" = "game.main:run_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
